query-compiler/query-compiler/tests/snapshots/queries__queries@upsert-partial-unique.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/upsert-partial-unique.json
snapshot_kind: text
---
dataMap {
    id: Int (id)
    email: String (email)
    status: String (status)
    name: String (name)
}
unique (query «INSERT INTO "public"."PartialUnique" ("email","status","name")
               VALUES ($1,$2,$3) ON CONFLICT ("email","status") DO UPDATE SET
               "name" = $4 WHERE (("public"."PartialUnique"."email" = $5 AND
               "public"."PartialUnique"."status" = $6) AND 1=1) RETURNING
               "public"."PartialUnique"."id", "public"."PartialUnique"."email",
               "public"."PartialUnique"."status",
               "public"."PartialUnique"."name"»
        params [const(String("user@example.com")), const(String("active")),
                const(String("created")), const(String("updated")),
                const(String("user@example.com")), const(String("active"))])
