query-compiler/query-compiler/tests/snapshots/queries__queries@upsert.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/upsert.json
---
dataMap {
    id: Int (id)
    email: String (email)
    role: Enum<Role> (role)
}
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
unique (query «INSERT INTO "public"."User" ("email","role") VALUES
               ($1,CAST($2::text AS "public"."Role")) ON CONFLICT ("email") DO
               UPDATE SET "email" = $3 WHERE "public"."User"."email" = $4
               RETURNING "public"."User"."id", "public"."User"."email",
               "public"."User"."role"::text»
        params [const(String("user.1@prisma.io")), const(String("user")),
                const(String("user.2@prisma.io")),
                const(String("user.1@prisma.io"))])
